<resources>
    <string name="app_name">itl_en</string>
    <string name="title_stats">Статистика</string>
    <string name="title_study">Обучение</string>
    <string name="title_vocab">Словарь</string>
    <string name="create_account">СОЗДАТЬ АККАУНТ</string>
    <string name="go">ВОЙТИ</string>
    <string name="app_name_en"><![CDATA[<en>]]></string>
    <string name="user_settings">Настройки профиля</string>
    <string name="unexpected_error">Возникла ошибка. Пожалуйста обратитесь позже</string>
    <string name="insert_pass">Введите пароль:</string>
    <string name="reg">Регистрация</string>
    <string name="auth">Авторизация</string>

    <string name="empty_fields">Поля не должны быть пустыми</string>
    <string name="short_pass_length">Длина пароля должна быть не менее 6 символов</string>
    <string name="pass_is_not_compare">Пароли не совпадают</string>
    <string name="login">войти в аккаунт</string>
    <string name="create_acc">создать аккаунт</string>
    <string name="create_user_before_auth">Зарегистрируйтесь, прежде чем войти</string>
    <string name="insert_name">Введите имя:</string>
    <string name="insert_email">Введите email:</string>
    <string name="insert_password">Введите пароль:</string>
    <string name="insert_password_again">Введите пароль повторно:</string>
    <string name="next">Далее</string>
    <string name="word">word</string>
    <string name="check_internet_connection">Проверьте свое интернет соединение</string>
    <string name="user_already_exist">Такой email уже используется</string>
    <string name="data_different_try_again">Данные не совпадают. Попробуйте еще раз</string>

</resources>