<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_stat">
    <fragment
        android:id="@+id/nav_stat"
        android:name="com.deadely.itl_en.ui.stat.view.StatFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stat" />
    <fragment
        android:id="@+id/nav_study"
        android:name="com.deadely.itl_en.ui.study.view.StudyFragment"
        android:label="@string/title_study"
        tools:layout="@layout/fragment_study" />
    <fragment
        android:id="@+id/nav_vocab"
        android:name="com.deadely.itl_en.ui.vocab.view.VocabFragment"
        android:label="@string/title_vocab"
        tools:layout="@layout/fragment_vocab" />
</navigation>