<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_stats">

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.deadely.itl_en.main.study.view.StudyFragment"
        android:label="@string/title_study"
        tools:layout="@layout/fragment_study" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.deadely.itl_en.main.stat.view.StatFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stat" />

    <fragment
        android:id="@+id/navigation_vocab"
        android:name="com.deadely.itl_en.main.vocab.view.VocabFragment"
        android:label="@string/title_vocab"
        tools:layout="@layout/fragment_vocab" />
</navigation>